--- a/css/index.css
+++ b/css/index.css
@@ -70,13 +70,12 @@
 @media only screen and (min-width: 480px){
 	.section-tiles ul li{
 		margin: .5rem;
-		flex: 1 1 calc(50% - 2.25rem - 1px)
+		flex: 1 1 calc(50% - 2rem - 1px)
 	}
 }
 @media only screen and (min-width: 992px){
 	.section-tiles ul li{
 		margin: .75rem;
-		flex: 1 1 calc(50% - 2.25rem - 1px)
 	}
 }
 /* ratio box used to set up cluster page tiles */ 
@@ -118,11 +117,12 @@
 }
 /* container for "Founding Developers" section */
 .founding-dev{
-	margin: 0 auto 2rem;	
+	margin: 0 auto 2.25rem;	
 	display: inline-block;
 }
 /* list of people for "Founding Developers" section */
 .founding-dev ul{
+	line-height: 2.25rem;
 	list-style: none;
 	margin-bottom: 0;
 	padding: 0;
@@ -135,14 +135,13 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	margin: .5rem auto;
-	padding: 0 1rem 1rem;
+	margin: .5rem auto 1rem;
+	padding: .25rem 1rem 1.25rem;
 	display: inline-block;
 }
 /* paragraph for text in social media links section */
 .participate p{
 	text-align: center;
-	margin: .5rem 0;
 }
 /* container for social media links in social media links section */
 .participate div{
