--- a/css/index.css
+++ b/css/index.css
@@ -117,7 +117,7 @@
 }
 /* container for "Founding Developers" section */
 .founding-dev{
-	margin: 0 auto 2.25rem;	
+	margin: 0 auto;	
 	display: inline-block;
 }
 /* list of people for "Founding Developers" section */
@@ -135,13 +135,20 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	margin: .5rem auto 1rem;
-	padding: .25rem 1rem 1.25rem;
-	display: inline-block;
+	margin: 2.5rem .5rem;
+	padding: 1rem 1rem 1.5rem;
+	display: flex;
+	flex-direction: column;
+}
+@media only screen and (min-width: 768px){
+	.participate{
+		margin: 3rem auto;
+		width: max-content;
+	}
 }
 /* paragraph for text in social media links section */
 .participate p{
-	text-align: center;
+	margin-top: 0;
 }
 /* container for social media links in social media links section */
 .participate div{
@@ -153,23 +160,23 @@
 /* hyperlink for social media links */
 .participate a,
 .participate a:visited{
-	font-size: .95rem;
-	/* line-height: 1.2rem; */
+	font-size: 1rem;
+	line-height: 1rem;
 	color: #fff;
+	text-decoration: none;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	margin: 0 .25rem;
-	padding: 4px 5px;
-	text-decoration: none;
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+	margin: 0 .5rem;
+	padding: 6px 8px;
+	display: flex;
+	align-items: center;
 }
-@media only screen and (min-width: 768px){
+@media only screen and (min-width: 480px){
 	.participate a,
 	.participate a:visited{
-		/* line-height: 1rem; */
-		margin: 0 .5rem;
-		padding: 4px 7px;
+		padding: 8px 10px;
 	}
 }
 .participate a:focus{
@@ -194,10 +201,4 @@
 .participate a.contribute:hover{
 	color: #242424;
 	background: #fff;
-}
-/* spacing for section following social media links section */
-@media only screen and (min-width: 768px){
-	.participate + section{
-		margin-top: 2rem;
-	}
 }
