--- a/css/carousel.css
+++ b/css/carousel.css
@@ -57,23 +57,17 @@
 /* Carousel caption (also see image caption) */
 .carousel .carousel-item .carousel-caption{
 	text-align: center;
-	line-height: 1.2em;
+	line-height: 1.5rem;
+	margin: 0 .5rem;
 	padding: 0;
 	position: absolute;
 	right: 0;
-	bottom: .4em;
+	bottom: .5rem;
 	left: 0;
-}
-@media only screen and (min-width: 480px){
-	.carousel .carousel-item .carousel-caption{
-		line-height: 1.6em;
-		bottom: .5em;
-	}
 }
 @media only screen and (min-width: 768px){
 	.carousel .carousel-item .carousel-caption{
-		right: .5em;
-		bottom: .5em;
+		right: .5rem;
 		left: unset;
 	}
 }
@@ -84,15 +78,8 @@
 	padding: 0;
 	display: inline-block;
 }
-@media only screen and (min-width: 320px){
-	.carousel .carousel-item .carousel-caption p{
-		line-height: inherit;
-	}
-}
-.carousel .carousel-item .carousel-caption p a{
-	font-size: 1em;
-}
 .carousel .carousel-item .carousel-caption a{
+	font-size: 1rem;
 	text-decoration: underline;
 	color: #fff;
 	background-color: rgba(0, 0, 0, 0.65);
@@ -101,8 +88,13 @@
 	-moz-border-radius: 5px;
 	border-radius: 5px;
 	margin: 0;
-	padding: 1px 6px;
+	padding: .15rem .5rem .35rem;
 	display: inline-block;
+}
+@media only screen and (min-width: 768px){
+	.carousel .carousel-item .carousel-caption a{
+		padding: .25rem .75rem .45rem;
+	}
 }
 .carousel .carousel-item .carousel-caption a:hover,
 .carousel .carousel-item .carousel-caption a:focus{
