--- a/css/cluster.css
+++ b/css/cluster.css
@@ -8,35 +8,39 @@
 .zoomcasts.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
 }
-.zoomcasts.cluster main section h2{
+.zoomcasts.cluster main section h2,
+.zoomcasts.cluster main section h3{
 	color: white;
 	background: #cb6948;
 }
 .lesson-plans.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #5378ac 50%);
 }
-.lesson-plans.cluster main section h2{
+.lesson-plans.cluster main section h2,
+.lesson-plans.cluster main section h3{
 	color: white;
 	background: #5378ac;
 }
 .syllabi.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
 }
-.syllabi.cluster main section h2{
+.syllabi.cluster main section h2,
+.syllabi.cluster main section h3{
 	color: white;
 	background: #728a61;
 }
 .about.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #757575 50%);
 }
-.about.cluster main section h2{
+.about.cluster main section h2,
+.about.cluster main section h3{
 	color: white;
 	background: #757575;
 }
 /* the main container for cluster pages */
 .cluster main{
 	margin: 47px auto 0;
-	padding: 0 .5em 0;
+	padding: 0 .75rem;
 	max-width: 100%;
 	position: relative;
 	display: -webkit-flex;
@@ -49,15 +53,16 @@
 @media only screen and (min-width: 480px){
 	.cluster main{
 		margin-top: 47px;
-		padding: .5em 1em 0;
+		padding: .5rem 1rem 0;
 	}
 }
 @media only screen and (min-width: 768px){
 	.cluster main{
 		margin-top: 51px;
+		padding: .5rem 0 0;
 		max-width: 700px;
 	}
-	/* specs for the main container for the zoomcasts cluster page */
+	/* the main container for the zoomcasts cluster page */
 	.cluster.zoomcasts main{
 		flex-direction: row;
 		flex-wrap: wrap;
@@ -67,13 +72,14 @@
 @media only screen and (min-width: 992px){
 	.cluster main{
 		margin-top: 63px;
-		max-width: calc(1000px + 4em);
+		padding: .5rem 1rem;
+		max-width: calc(1000px + 4rem);
 		align-items: stretch;
 		flex-direction: row;
 		flex-wrap: wrap;
 		gap: 1.5rem;
 	}
-	/* specs for the main container for the zoomcasts cluster page */
+	/* the main container for the zoomcasts cluster page */
 	.cluster.zoomcasts main{
 		gap: 1.5rem;
 	}
@@ -99,30 +105,30 @@
 /* the subsection containers in the main zoomcats container */
 @media only screen and (min-width: 768px){
 	.cluster.zoomcasts main section{
-		flex: 0 0 calc(50%  - .5rem - 2px);
+		flex: 0 0 calc(50%  - .5rem);
 	}
 	/* the subsection container for the zoomcast cluster page's title slide */
 	.cluster.zoomcasts main section:first-child{
-		flex: 1 0 calc(100% - 2px);
+		flex: 1 0 100%;
 	}
 	/* the subsection container for the zoomcast cluster page's description slide */
 	.cluster.zoomcasts main section:nth-child(2){
-		flex: 1 0 calc(100% - 2px);
+		flex: 1 0 100%;
 	}
 }
 @media only screen and (min-width: 992px){
 	.cluster main section{
 		max-width: 500px;
-		flex: 1 0 calc(50% - 1rem - 2px);
+		flex: 1 0 calc(50% - 1rem);
 	}
 	.cluster.zoomcasts main section{
 		max-width: 333.3px;
-		flex: 1 0 calc(33.3% - 1.5rem - 2px);
+		flex: 1 0 calc(33.3% - 1.5rem);
 	}
 		.cluster main section:first-child,
 		.cluster.zoomcasts main section:first-child{
 			max-width: 300px;
-			flex: 1 0 calc(27.5% - 1rem - 2px);
+			flex: 1 0 calc(27.5% - 1rem);
 	}
 	/* the subsection container for cluster page description slides;
 	the subsection container for the zoomcast cluster page's description slide */
@@ -132,22 +138,9 @@
 		flex: 1 0 calc(72.5% - 1rem - 2px);
 	}
 }
-/* the main subsection heading; this indicates the cluster series to which a content page belongs */
-.cluster main section h2{
-	font-size: 1.1em;
-	font-weight: 700;
-	font-variant: normal;
-	color: #fff;
-	border-bottom: 1px solid #242424;
-	-webkit-border-radius: 4px 4px 0 0;
-	-moz-border-radius: 4px 4px 0 0;
-	border-radius: 4px 4px 0 0;
-	margin: 0;
-	padding: .5em;
-}
 /* the heading on the cluster page title slide */
 .cluster main section h2#level-2-title{
-	font-size: 1.5em;
+	font-size: 1.5rem;
 	white-space: nowrap;
 	border: 3px solid #fff;
 	-webkit-border-radius: 5px;
@@ -163,15 +156,28 @@
 	-moz-transform: translate(-50%, -50%);
 	transform: translate(-50%, -50%);
 }
+/* the main subsection heading; this indicates the cluster series to which a content page belongs */
+.cluster main section h3{
+	font-size: 1.2rem;
+	font-weight: 700;
+	font-variant: normal;
+	color: #fff;
+	border-bottom: 1px solid #242424;
+	-webkit-border-radius: 4px 4px 0 0;
+	-moz-border-radius: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;
+	margin: 0;
+	padding: .5rem;
+}
 /* the descriptive text on the zoomcasts cluster page title slide */
 .cluster.zoomcasts main section:nth-child(2) p{
-	margin: 1em;
+	margin: 1rem;
 }
-/* ratio box used for header images */ 
+/* ratio box used for content page images */ 
 /* adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 .cluster main section div{
 	background: #e6e6e6;
-	margin: 1em;
+	margin: 1rem;
 	padding: 0;
 	position: relative;
 }
@@ -235,12 +241,11 @@
 /* the label that appears over each cluster page slide image */
 /* some specs below derive from Livingstone Online level two slides; see, e.g., https://livingstoneonline.org/spectral-imaging */
 .cluster main section div span{
-	font-size: 1.1em;
+	font-size: 1.15rem;
 	color: #fff;
 	background-color: rgb(66,66,66);
-	line-height: 1.5em;
 	text-align: center;
-	padding: .25em 0;
+	padding: .3rem 0;
 	width: 100%;
 	/* min-height: 20%; */
 	position: absolute;
@@ -252,16 +257,17 @@
 	opacity: .9;
 }
 .cluster.zoomcasts main section div span{
-	font-size: 1em;
+	font-size: 1.05rem;
 }
 /* the descriptive text below each cluster page slide image */
 .cluster main section p{
-	font-size: .95em;
-	padding: 0 1em;
+	font-size: 1.05rem;
+	padding: 0 1rem;
 }
 /* the descriptive text below each zoomcasts cluster page slide image */
 .cluster.zoomcasts main section p{
-	margin: 0 1em 1em;
+	line-height: 1.875rem;
+	margin: 0 .5rem 1rem;
 }
 /* the list of lesson plan buttons that appears on collective lesson plan slides */
 /* note: although this coding is set up for general use, at present it is only used on /html/lesson_plans.html */
@@ -269,7 +275,7 @@
 .cluster main section ul{
 	text-align: center;
 	list-style: none;
-	margin: 1em 1em 1.5em;
+	margin: 1rem;
 	padding: 0;
 }
 @media only screen and (min-width: 768px){
@@ -282,27 +288,26 @@
 }
 /* an item in the list of lesson plan buttons that appears on collective lesson plan slides */
 .cluster main section ul li{
-	line-height: 1.5em;
 	border: 1px solid #e6e6e6;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	margin: 1em 0;
-	padding: .3em;
+	margin: 1.25rem 0;
+	padding: .3rem;
 	box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ul li{
-		margin: .75em .5em;
-		padding: .15em .25em;
+		margin: .75rem .75rem;
+		padding: .15rem .25rem;
 		min-height: 35px;
-		flex: 0 0 calc(50% - 2px - 1.5em);
+		flex: 0 0 calc(50% - 1.5rem);
 	}
 }
 /* the first item in the list of lesson plan buttons that appears on collective lesson plan slides; this item serves as the title for the collective lesson plan slides */
 /* note: the coding on this should be changed to support accessibility */
 .cluster main section ul li:first-child{
-	font-size: .95em;
+	font-size: 1rem;
 	font-family: 'Noto Serif', serif;
 	font-weight: 600;
 	background: #e6e6e6;
@@ -310,16 +315,17 @@
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ul li:first-child{
-		margin: .5em .5em .75em;
+		margin: .5rem .5rem .75rem;
 		display: block;
-		flex: 1 0 calc(100% - 2px - 1.5em);
+		flex: 1 0 calc(100% - 1rem);
 	}
 }
 /* hyperlink on items in the list of lesson plan buttons that appears on collective lesson plan slides */
 .cluster main section ul li a,
 .cluster main section ul li a:visited{
-	font-size: .95em;
+	font-size: 1rem;
 	text-decoration: none;
+	line-height: 1.75rem;
 	color: #242424;
 	width: 100%;
 	height: 100%;
