--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,7 @@
 	border-radius: 5px;
 	margin: 2.5rem .5rem;
 	padding: 1rem 1rem 1.5rem;
+	display: -webkit-flex;
 	display: flex;
 	flex-direction: column;
 }
@@ -170,6 +171,7 @@
 	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 	margin: 0 .5rem;
 	padding: 6px 8px;
+	display: -webkit-flex;
 	display: flex;
 	align-items: center;
 }
