--- a/css/youtube.css
+++ b/css/youtube.css
@@ -8,13 +8,13 @@
 
 /* main container for embedded YouTube video */
 .wrapper{
-	margin: 1em auto 1.5em;
+	margin: 1rem auto 1.5rem;
 	padding: 0;
 	border: 1px solid #242424;
 }
 @media only screen and (min-width: 480px){
 	.wrapper{
-		margin: 1em auto 1.5em;
+		margin: 1rem auto 2rem;
 	}
 }
 /* secondary container for embedded YouTube video */
@@ -107,7 +107,7 @@
 }
 /* dropdown button for tab navigation to skip controls for YouTube video after starting play */
 .skipcontrols a{
-	font-size: .8em;
+	font-size: .9rem;
 	font-family: Arial, Geneva, Tahoma, sans-serif;
 	color: #395375;
 	background: #e6e6e6;
@@ -123,7 +123,7 @@
 }
 @media only screen and (min-width: 768px){
 	.skipcontrols a{
-		font-size: .9em;
+		font-size: 1rem;
 	}
 }
 .skipcontrols a{
