--- a/css/timeline.css
+++ b/css/timeline.css
@@ -176,6 +176,6 @@ section section .timeline-block-left h4{
   font-size: .95rem;
   word-spacing: 1px;
   text-align: inherit;
-  line-height: 1.5em;
+  line-height: 1.7rem;
   margin: .5rem 0 0;
 }
